Refactorado processo de criação e validação do usuário; atualizado UserModel para incluir loginToken e atualizada a documentação Swagger.
